doc: update swagger document
